# Lem_in

./: CMakeLists.txt  Makefile  README.md  author
includes/: lem_in.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h
libft/src/: ft_atoi.c  ft_strstr.c
src/: algorithm.c  main.c  manage_ants.c  move_ants.c  read_input.c  save_values.c  utillity.c  validate_values.c
src/graph/: add_vertex.c  remove_graph.c
src/queue/: add_queue.c  remove_queue.c
